minio-deployment.yaml
# minio-deployment.yaml

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  namespace: default # Ensure this matches your application namespace
  labels:
    app: minio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
        - name: minio
          image: minio/minio:latest # Use a specific version like minio/minio:RELEASE.2024-05-18T05-18-20Z for stability
          args:
            - server
            - /data
            - --console-address
            - ":9001" # MinIO Console Port
          ports:
            - containerPort: 9000 # S3 API Port
              name: http-s3
            - containerPort: 9001 # Console Port
              name: http-console
          volumeMounts:
            - name: storage
              mountPath: "/data"
          resources:
            requests:
              memory: "512Mi" # Adjust based on your available resources and MinIO usage
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: minio-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: minio # This name must be "minio" for your deployments.yaml
  namespace: default # Ensure this matches your application namespace
  labels:
    app: minio
spec:
  type: ClusterIP
  selector:
    app: minio
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
      name: http-s3
    - port: 9001
      targetPort: 9001
      protocol: TCP
      name: http-console
